src/main/java/org/example/liskov/substitution/good/SecureLoanPayment.java
package org.example.liskov.substitution.good;

public interface SecureLoanPayment extends LoanPayment{

    public void forceCloseLoan();
}
